<resources>
    <string name="app_name">Alertru</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="selectDate">Seleccione una Fecha</string>
    <string name="search">Búsqueda</string>
    <string name="settings">Configuración</string>
    <string name="info">Información</string>
    <string name="user_data">Datos de usuario</string>
    <string name="incidents">Incidencias</string>
    <string name="alertru">Alertru</string>
    <string name="searchTitle">BUSCADOR DE ALERTAS</string>
    <string name="searchAction">Acciones</string>
    <string name="searchRadio1">Buscar sin asignar</string>
    <string name="searchRadio2">Buscar asignadas</string>
    <string name="searchCheckBox">Buscar asignadas y sin asignar</string>
    <string name="searchButtonAll">BUSCAR TODAS</string>
    <string name="searchButtonByDate">BUSCAR</string>
    <string name="menu">Menú</string>
    <string name="textProvince">Seleccione una provincia:</string>
    <string name="webPage">www.gnommostudios.com</string>
    <string name="numberFixedPhone">96 206 40 64</string>
    <string name="numberMobilePhone">675 215 026</string>
    <string name="emailInfo">info@gnommostudios.com</string>
    <string name="emailSupport">soporte@gnommostudios.com</string>
    <string name="titleDataUser">Registrate</string>
    <string name="province_prompt">- ninguna -</string>

    <string-array name="province_arrays">
        <item>Barcelona</item>
        <item>Madrid</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="computerSolutions">Soluciones Informáticas</string>
    <string name="since">Desde</string>
    <string name="to">Hasta</string>
    <string name="activate_alerts">Activar Alertas:</string>
    <string name="ringote_choice">Elige un sonido de alerta:</string>
    <string name="ringote">Sonido de Alerta:</string>
    <string name="version">Ver: 1.2.0</string>
    <string name="assigned">-assigned-</string>
    <string name="unassigned">-unassigned-</string>
    <string name="control_panel">Panel de control</string>
    <string name="messaje_login">AVISO: No esta logeado!</string>
    <string name="alerta">ALERTA NUEVA</string>
    <string name="registry_option">¿No te has registrado? Hazlo ahora</string>
    <string name="loggin_option">¿Ya estas registrado? Inicia sesión aqui</string>
    <string name="titleDataUserLogin">Iniciar Sesión</string>
    <string name="error_connection">Problemas de conexión</string>
    <string name="without_results">Sin Resultados</string>
    <string name="titleAssign">¿Quieres asignarte esta alerta?</string>
    <string name="cancel">Cancelar</string>
    <string name="assign">Assignar</string>
    <string name="titleAssigned">La alerta ya esta asignada otro usuario</string>
    <string name="titleAssignedYou">Ya tienes esta alerta asignada</string>
    <string name="ok">Vale</string>
    <string name="close_alert">Cerrar Incidencia</string>
    <string name="searchFinalized">Ver Cerradas</string>
    <string name="without_alerts">No hay alertas activas.</string>
    <string name="writeNotes">Por favor, escriba el parte de la incidencia.</string>

</resources>
