<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:textStyle="italic|bold"
                    android:textSize="15dp"
                    android:paddingBottom="5dp"
                    android:paddingTop="5dp"
                    android:gravity="left"
                    android:textColor="@color/colorWhite"
                    android:text="@string/searchTitle"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1">
            </LinearLayout>

                <ImageView
                    android:id="@+id/searchCloseWindow"
                    android:layout_width="match_parent"
                    android:layout_gravity="center"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    android:src="@drawable/androidclose_b" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:layout_marginHorizontal="10dp"
            android:text="Desde" />

        <CalendarView
            android:id="@+id/calendarDesde"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:layout_height="140dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_margin="10dp"
            android:background="#000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22dp"
            android:layout_marginHorizontal="10dp"
            android:text="Hasta" />

        <CalendarView
            android:id="@+id/calendarHasta"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:layout_height="140dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:background="#000"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/searchAction"
                android:textSize="20dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/radioOpenSearch"
                    android:text="@string/searchRadio1"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/searchCheckBox"/>

            </LinearLayout>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/radioCloseSearch"
                android:layout_marginBottom="10dp"
                android:text="@string/searchRadio2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"
                    android:textSize="10dp"
                    android:textStyle="italic|bold"
                    android:textColor="@color/colorWhite"
                    android:id="@+id/searchButtonAll"
                    android:text="@string/searchButtonAll"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <Button
                    android:id="@+id/searchButtonByDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimary"
                    android:textSize="10dp"
                    android:textStyle="italic|bold"
                    android:textColor="@color/colorWhite"
                    android:text="@string/searchButtonByDate"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

