<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/searchDialog"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:padding="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/txtDateEnter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:hint="Fecha Entrada"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="220dp"
                android:layout_height="3dp"
                android:background="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="15dp">

            <TextView
                android:id="@+id/txtDateExit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textAlignment="center"
                android:hint="Fecha  Salida"
                android:textSize="30sp" />

            <LinearLayout
                android:layout_gravity="center"
                android:layout_width="220dp"
                android:layout_height="3dp"
                android:background="@color/colorPrimary"  />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="15dp"
            android:text="@string/searchAction"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:orientation="horizontal">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioOpenSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/searchRadio1" />

                <RadioButton
                    android:id="@+id/radioCloseSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:buttonTint="@color/colorPrimary"
                    android:text="@string/searchRadio2" />

            </RadioGroup>

            <CheckBox
                android:id="@+id/checkSearchOpenAndExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:buttonTint="@color/colorPrimary"
                android:text="@string/searchCheckBox" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/searchButtonAll"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:background="@color/colorPrimary"
                android:text="@string/searchButtonAll"
                android:textColor="@color/colorWhite"
                android:textSize="10dp"
                android:textStyle="italic|bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <Button
                android:id="@+id/searchButtonByDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:background="@color/colorPrimary"
                android:text="@string/searchButtonByDate"
                android:textColor="@color/colorWhite"
                android:textSize="10dp"
                android:textStyle="italic|bold" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>