<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/backgroundInformation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/informationTitle"
        android:layout_width="match_parent"
        android:layout_height="512dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitleInfomation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24dp"
            android:textStyle="italic"
            android:textColor="@color/gray"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Body2"
            tools:text="Soluciones Informáticas" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="10dp"
            android:background="#000000" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteY="19dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="fitXY"
                    android:layout_marginTop="10dp"
                    android:padding="15dp"
                    android:layout_marginBottom="10dp"
                    app:srcCompat="@drawable/gnommo_studios" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtInformationWebPage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:textColor="@color/green"
                        android:clickable="true"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/webPage" />

                    <TextView
                        android:id="@+id/txtNumberPhone1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/green"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:text="@string/numberFixedPhone" />

                    <TextView
                        android:id="@+id/txtNumberPhone2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:textColor="@color/green"
                        android:text="@string/numberMobilePhone" />

                    <TextView
                        android:id="@+id/txtInformationMail1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:textColor="@color/green"
                        android:text="@string/emailInfo" />

                    <TextView
                        android:id="@+id/txtInformationMail2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:textColor="@color/green"
                        android:text="@string/emailSupport" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#000000" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/asdasd"
                    android:layout_width="wrap_content"
                    android:layout_height="145dp"
                    android:scaleType="fitXY"
                    android:padding="30dp"
                    android:src="@drawable/logo_solger"/>

                <TextView
                    android:id="@+id/asdasd2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:paddingBottom="10dp"
                    android:text="Produced by: Solger Energy"/>
            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="bottom"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="Ver: 1.2.0" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
